--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,43 +5,36 @@
 <link rel="stylesheet" type="text/css" href="https://etymos.github.io/css/reset.css">
 
 <style>
-
 body {
 max-width:36rem;
 margin:6rem auto
 }
-
 h1 {
 font-size:2.5rem;
 line-height:3rem;
 margin-bottom:3rem;
 }
-
 a {
 font-family: 'Neuton', serif;
 font-size:1.5rem;
 Line-height:2rem;
 }
-
 li {
 font-family:Inter;
 line-height:1.5rem;
 margin-bottom:3rem}
-
 </style>
 
 </head>
 <body>
 
-<h1>{{ page.title }}</h1>
+<h1>{{ title }}</h1>
 	<ul class="posts">
 
 	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+		<li><span>{{ post.date | date: "%Y-%m-%d" }}</span><br><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
-
-</ul>
-
+	
 </body>
 </html>
