--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ margin-bottom:3rem}
 </head>
 <body>
 
-<h1>{{ title }}</h1>
+<h1>Etymos: a personal blog</h1>
 	<ul class="posts">
 
 	  {% for post in site.posts %}
