--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,8 +27,8 @@ em {font-style:italic}
 </head>
 <body>
 
-<h1>{{ post.title }}</h1>
-<p style="font-family:inter;font-weight:600;line-height:3rem;font-size:1.2rem;margin-bottom:1.5rem">{{ post.date | date: "%d %B %Y" }}</p>
+<h1>{{ page.title }}</h1>
+<p style="font-family:inter;font-weight:600;line-height:3rem;font-size:1.2rem;margin-bottom:1.5rem">{{ page.date | date: "%d %B %Y" }}</p>
 <p>{{ content }}</p>
 
 </body>
