--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>{{ page.title }} - Etymos</title>
 <link rel="stylesheet" type="text/css" href="https://etymos.github.io/css/reset.css">
 <style>
 
