--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,38 +3,19 @@
 <head>
 <title>Etymos: a personal blog</title>
 <link rel="stylesheet" type="text/css" href="https://etymos.github.io/css/reset.css">
-
 <style>
-body {
-max-width:36rem;
-margin:6rem auto
-}
-h1 {
-font-size:2.5rem;
-line-height:3rem;
-margin-bottom:3rem;
-}
-a {
-font-family: 'Neuton', serif;
-font-size:1.5rem;
-Line-height:2rem;
-}
-li {
-font-family:Inter;
-line-height:1.5rem;
-margin-bottom:3rem}
+body{margin:6rem auto;max-width:36rem;}
+h1{font-size:2.5rem;line-height:3rem;margin-bottom:3rem}
+a{font-family:'Neuton',serif;font-size:1.5rem;line-height:2rem}
+li{font-family:'Inter',sans-serif;line-height:1.5rem;margin-bottom:3rem}
 </style>
-
 </head>
 <body>
-
 <h1>Etymos: a personal blog</h1>
-	<ul class="posts">
-
+  <ul>
 	  {% for post in site.posts %}
-		<li><span>{{ post.date | date: "%Y-%m-%d" }}</span><br><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  <li>{{ post.date | date: "%Y-%m-%d" }}<br><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
-	</ul>
-	
+  </ul>	
 </body>
 </html>
