--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,32 +4,15 @@
 <title>{{ page.title }} - Etymos</title>
 <link rel="stylesheet" type="text/css" href="https://etymos.github.io/css/reset.css">
 <style>
-
-body {
-max-width:36rem;
-margin:6rem auto;
-padding:0 1rem
-}
-h1 {
-font-size:2.5rem;
-line-height:3rem;
-margin-bottom:1.5rem;
-}
-p {
-font-size:1.5rem;
-line-height:2rem;
-margin-bottom:1.5rem;
-}
-
-em {font-style:italic}
+body{margin:6rem auto;max-width:36rem;padding:0 1rem}
+h1{font-size:2.5rem;line-height:3rem;margin-bottom:1.5rem}
+p{font-size:1.5rem;line-height:2rem;margin-bottom:1.5rem}
+em{font-style:italic}
 </style>
-
 </head>
 <body>
-
 <h1>{{ page.title }}</h1>
-<p style="font-family:inter;font-weight:600;line-height:3rem;font-size:1.2rem;margin-bottom:1.5rem">{{ page.date | date: "%-d %B %Y" }}</p>
+<p style="font-family:'Inter',sans-serif;font-size:1.2rem;font-weight:600;line-height:3rem;margin-bottom:1.5rem">{{ page.date | date: "%-d %B %Y" }}</p>
 <p>{{ content }}</p>
-
 </body>
 </html>
