--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Etymos: a personal blog</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="https://etymos.github.io/css/reset.css">
 <style>
 body{margin:6rem auto;max-width:36rem;}
