--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="https://etymos.github.io/css/reset.css">
 <style>
-body{margin:6rem auto;max-width:36rem;}
+body{margin:6rem auto;max-width:36rem;padding:0 1rem}
 h1{font-size:2.5rem;line-height:3rem;margin-bottom:3rem}
 a{font-family:'Neuton',serif;font-size:1.5rem;line-height:2rem}
 li{font-family:'Inter',sans-serif;line-height:1.5rem;margin-bottom:3rem}
