--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,11 @@ body{margin:3rem auto;max-width:33rem;padding:0 1rem}
 h1{font-size:2rem;line-height:2.4rem;margin-bottom:3rem}
 a{font-family:'Neuton',serif;font-size:1.35rem;line-height:1.8rem}
 li{font-family:'Inter',sans-serif;line-height:1.5rem;margin-bottom:3rem}
+@media screen and (min-width: 48rem) {
+body {margin:6rem auto;max-width:36rem;padding:0}
+h1 {font-size:2.5rem;line-height:3rem}
+a {font-size:1.5rem;line-height:2rem}
+}
 </style>
 </head>
 <body>
