--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,12 @@ h1{font-size:2rem;line-height:2.4rem;margin-bottom:1.5rem}
 p{font-size:1.35rem;line-height:1.8rem;margin-bottom:1.5rem}
 p.date {font-family:'Inter',sans-serif;font-size:1.125rem;font-weight:600;line-height:1.5rem;}
 em{font-style:italic}
+@media screen and (min-width: 48rem) {
+body {margin:6rem auto;max-width:36rem;padding:0}
+h1 {font-size:2.5rem;line-height:3rem}
+p {font-size:1.5rem;line-height:2rem}
+p.date {font-size:1.2rem}
+}
 </style>
 </head>
 <body>
