--- a/css/reset.css
+++ b/css/reset.css
@@ -25,5 +25,5 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 /* core css */
 body{background-color:#1c1c1c;color:#f2f2f2;font-family:'Neuton',serif}
 h1{font-family:'Inter',sans-serif}
-a{color:#03A9F4;text-decoration:none;transition:color .4s}
-a:hover{color:#81D4FA}
+a{color:#FFDC00;text-decoration:none;transition:color .4s}
+a:hover{color:#FFC107}
