--- a/css/reset.css
+++ b/css/reset.css
@@ -26,4 +26,4 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 body{background-color:#1c1c1c;color:#f2f2f2;font-family:'Neuton',serif}
 h1{font-family:'Inter',sans-serif}
 a{color:#FFDC00;text-decoration:none;transition:color .4s}
-a:hover{color:#FFC107}
+a:hover{color:#FFB300}
