--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,14 +7,17 @@
 <style>
 body{margin:3rem auto;max-width:33rem;padding:0 1rem}
 h1{font-size:2rem;line-height:2.4rem;margin-bottom:1.5rem}
-p{font-size:1.35rem;line-height:1.8rem;margin-bottom:1.5rem}
-p.date {font-family:'Inter',sans-serif;font-size:1.125rem;font-weight:600;line-height:1.5rem;}
+h2{font-family:'Inter';font-size:1.5rem;line-height:1.8rem;margin-bottom:1.125rem;margin-top:1.8rem}
+p,blockquote{font-size:1.35rem;line-height:1.8rem;margin-bottom:1.5rem}
+blockquote{border-left:1px solid;padding-left:1.5rem}
+p.date{font-family:'Inter',sans-serif;font-size:1.125rem;font-weight:600;line-height:1.5rem}
 em{font-style:italic}
 @media screen and (min-width: 50rem) {
-body {margin:6rem auto;max-width:44rem;padding:0}
-h1 {font-size:2.5rem;line-height:3rem}
-p {font-size:1.8rem;line-height:2.4rem}
-p.date {font-size:1.2rem}
+body{margin:6rem auto;max-width:44rem;padding:0}
+h1{font-size:2.5rem;line-height:3rem}
+h2{font-size:1.875rem;line-height:2.25rem;margin-top:2.25rem}
+p,blockquote{font-size:1.8rem;line-height:2.4rem}
+p.date{font-size:1.2rem}
 }
 </style>
 </head>
