--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,6 @@ p.date{font-size:1.2rem}
 <body>
 <h1>{{ page.title }}</h1>
 <p class=date>{{ page.date | date: "%-d %B %Y" }}</p>
-<p>{{ content }}</p>
+{{ content }}
 </body>
 </html>
