--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
 body{margin:3rem auto;max-width:33rem;padding:0 1rem}
 h1{font-size:2rem;line-height:2.4rem;margin-bottom:1.5rem}
 h2{font-family:'Inter';font-size:1.5rem;line-height:1.8rem;margin-bottom:1.125rem;margin-top:1.8rem}
+img{display:inline-block;margin-bottom:1.5rem;width:100%}
 p,blockquote{font-size:1.35rem;line-height:1.8rem;margin-bottom:1.5rem}
 blockquote{border-left:1px solid;padding-left:1.5rem}
 p.date{font-family:'Inter',sans-serif;font-size:1.125rem;font-weight:600;line-height:1.5rem}
