--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 <head>
 <title>Etymos: a personal blog</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="https://etymos.github.io/css/reset.css">
+<link rel="stylesheet" type="text/css" href="https://jl-c.github.io/css/reset.css">
 <style>
 body{margin:3rem auto;max-width:33rem;padding:0 1rem}
 h1{font-size:2rem;line-height:2.4rem;margin-bottom:3rem}
